app/Connector/packages/connector-theme/sass/src/button/Button.scss
/* General button*/
a.x-btn {
  &:hover, &:active {
    text-decoration: none;
  }
}

@include extjs-button-ui (
  $ui: 'paging-widget-pages-small',

  $border-radius : 2px,

  $background-color: $white,
  $background-color-over: $gray-7,

  $border-width : 0px,
  $text-padding: 0px,

  $font-size : 11px,
  $font-family: $info-font,
  $font-family-over: $info-font,
  $font-family-focus: $info-font,
  $font-family-pressed: $info-font,
  $font-family-disabled: $info-font,

  $glyph-color : $white
);

.x-btn-paging-widget-pages-small {
  margin: 2px 0 0 0 !important;
  padding: 4px 6px 4px 5px !important;
  height: 20px;
  width: auto;
}

.x-btn-paging-widget-pages-small:hover .x-btn-inner {
  color: $white; /* Fallback for older browsers */
  color: rgba(0, 0, 0, 0.87);
}

.x-btn-paging-widget-pages-small:active .x-btn-inner {
  color: $white; /* Fallback for older browsers */
  color: white; /* Fallback for older browsers */
  color: rgba(255, 255, 255, 1) !important;
}

.x-btn-paging-widget-pages-small .x-btn-inner {
  color: $secondary-text-color; /* Fallback for older browsers */
  color: rgba(0, 0, 0, 0.54);
}

.x-btn-paging-widget-pages-disabled {
  cursor: default !important;
}

.x-btn.x-item-disabled {
  cursor: default !important;
}

.x-btn-paging-widget-pages-small.selected {
  background-color: $action-red !important;

  .x-btn-inner {
    color: $white; /* Fallback for older browsers */
    color: rgba(255, 255, 255, 1) !important;
  }
}

/* Connector.button.RoundedButton */
@include extjs-button-ui (
  $ui: 'rounded-small',

  $border-radius : 2px,

  $background-color: $secondary-color,
  $background-color-focus: darken($secondary-color, 8),
  $background-color-over: darken($secondary-color, 8),

  $border-width : 2px,
  $border-color: $white,
  $border-color-over: $gray-7,
  $border-color-focus: $gray-7,
  $border-color-pressed: $dark-color,
  $border-color-disabled: $dark-color,

  $text-padding: 5px,

  $color: $dark-color,
  $color-disabled: $dark-color,

  $font-size : 12px,
  $font-family: $info-font,
  $font-family-over: $info-font,
  $font-family-focus: $info-font,
  $font-family-pressed: $info-font,
  $font-family-disabled: $info-font,

  $icon-size : 15px,
  $glyph-color : $white
);

@include extjs-button-ui (
  $ui: 'rounded-accent-small',

  $border-radius : 2px,
  $background-color: $interactive-color,
  $background-color-over: opacify($interactive-color, 0.4),
  $border-width : 0px,
  $text-padding: 5px,
  $color: $heat-scale-4,
  $color-disabled: $heat-scale-4,

  $font-size : 12px,
  $font-family: $info-font,
  $font-family-over: $info-font,
  $font-family-focus: $info-font,
  $font-family-pressed: $info-font,
  $font-family-disabled: $info-font,

  $icon-size : 10px,
  $glyph-color : $white
);

@include extjs-button-ui (
  $ui: 'darkrounded-small',

  $border-radius : 2px,

  $background-color: $heat-scale-2,
  $background-color-pressed: $heat-scale-1,
  $background-color-over: $heat-scale-1,
  $background-color-disabled: $heat-scale-4,

  $border-width : 0px,
  $border-color: $heat-scale-2,
  $border-color-over: $heat-scale-1,
  $border-color-pressed: $heat-scale-1,
  $border-color-disabled: $heat-scale-4,

  $text-padding: 8px,

  $color: $gray-7,
  $color-over: $gray-7,
  $color-disabled: $heat-scale-3,

  $font-size : 12px,
  $font-family: $info-font,
  $font-family-over: $info-font,
  $font-family-focus: $info-font,
  $font-family-pressed: $info-font,
  $font-family-disabled: $info-font,

  $icon-size : 15px,
  $glyph-color : $white
);

.x-btn-darkrounded-small {
  padding: 5px 5px 4px 5px;
  background-image: none;
  height: 24px;
}

.x-btn-darkrounded-small-disabled {
  cursor: default;
}

/* Connector.button.DropDownButton */
@include extjs-button-ui (
  $ui: 'dropdown-small',

  $border-radius : 2px,

  $background-color: $interactive-color,
  $background-color-over: $gray-7,

  $border-width : 0px,
  $border-color: $white,
  $border-color-over: $gray-7,
  $border-color-focus: $gray-7,
  $border-color-pressed: $dark-color,
  $border-color-disabled: $dark-color,

  $color: $gray-7,
  $color-over : $interactive-color,
  $color-disabled: $dark-color,

  $font-size : 12px,
  $font-family: $info-font,
  $font-family-over: $info-font,
  $font-family-focus: $info-font,
  $font-family-pressed: $info-font,
  $font-family-disabled: $info-font,

  $icon-size : 18px,
  $glyph-color : $white
);

.x-btn-dropdown-small {
  height: 24px;
  width: 24px;
  padding: 3px 0 0 1px;

  .x-btn-arrow {
    background-image: none;
  }
}

.x-btn-dropdown-small-icon button,
.x-btn-dropdown-small-icon .x-btn-inner,
.x-btn-dropdown-small-noicon button, .x-btn-dropdown-small-noicon .x-btn-inner {
  height: 21px;
  line-height: normal;
}

.x-btn-dropdown-small-hld {
  background-color: $gray-7;

  span.x-btn-inner {
    color: $interactive-color;
  }
}

@include extjs-button-ui (
  $ui: 'dropdown-alt-small',

  $border-radius : 2px,

  $background-color: $interactive-color,
  $background-color-over: $gray-7,

  $border-width : 0px,
  $border-color: $white,
  $border-color-over: $gray-7,
  $border-color-focus: $gray-7,
  $border-color-pressed: $dark-color,
  $border-color-disabled: $dark-color,

  $color: $white,
  $color-over : $interactive-color,
  $color-disabled: $dark-color,

  $font-size : 12px,
  $font-family: $info-font,
  $font-family-over: $info-font,
  $font-family-focus: $info-font,
  $font-family-pressed: $info-font,
  $font-family-disabled: $info-font,

  $icon-size : 12px,
  $glyph-color : $white
);

.x-btn-dropdown-alt-small {
  height: 17px;
  width: 17px;
  padding: 1px;

  .x-btn-arrow {
    background-image: none;
  }
}

.x-btn-dropdown-alt-small-icon button,
.x-btn-dropdown-alt-small-icon .x-btn-inner,
.x-btn-dropdown-alt-small-noicon button,
.x-btn-dropdown-alt-small-noicon .x-btn-inner {
  height: 22px;
  line-height: normal;
}

.x-btn-dropdown-alt-small-hld {
  background-color: $gray-7;

  span.x-btn-inner {
    color: $interactive-color;
  }
}

@include extjs-button-ui (
  $ui: 'linked-small',

  $border-radius : 2px,
  $border-width : 0px,
  $border-color: transparent,
  $border-color-over: transparent,

  $background-color: transparent,
  $background-color-over: transparent,

  $text-padding: 0px,

  $color: $interactive-color,
  $color-over: $interactive-color,
  $color-disabled: $heat-scale-4,

  $font-weight: normal,

  $font-size : 12px,
  $font-family: $info-font,
  $font-family-over: $info-font,
  $font-family-focus: $info-font,
  $font-family-pressed: $info-font,
  $font-family-disabled: $info-font,

  $icon-size : 12px,
  $glyph-color : $white
);

@include extjs-button-ui (
  $ui: 'linked-ul-small',

  $border-radius : 2px,
  $border-width : 0px,
  $border-color: transparent,
  $border-color-over: transparent,

  $background-color: transparent,
  $background-color-over: transparent,

  $text-padding: 0px,

  $color: $interactive-color,
  $color-over: $interactive-color,
  $color-disabled: $heat-scale-4,

  $font-weight: normal,

  $font-size : 12px,
  $font-family: $info-font,
  $font-family-over: $info-font,
  $font-family-focus: $info-font,
  $font-family-pressed: $info-font,
  $font-family-disabled: $info-font,

  $icon-size : 12px,
  $glyph-color : $white
);

.x-btn-linked-ul-small .x-btn-inner {
  text-decoration: underline;
}

@include extjs-button-ui (
  $ui: 'rounded-inverted-accent-small',

  $border-radius : 2px,

  $background-color: $interactive-color,
  $background-color-over: $interactive-color,
  $background-color-disabled: $heat-scale-4,

  $border-width : 0px,
  $border-color: $white,
  $border-color-over: $gray-7,
  $border-color-focus: $gray-7,
  $border-color-pressed: $dark-color,
  $border-color-disabled: $gray-7,

  $color: $white,
  $color-over : $white,
  $color-disabled: $gray-7,

  $font-size : 12px,
  $font-family: $info-font,
  $font-family-over: $info-font,
  $font-family-focus: $info-font,
  $font-family-pressed: $info-font,
  $font-family-disabled: $info-font,

  $icon-size : 12px,
  $glyph-color : $white
);

@include extjs-button-ui (
  $ui: 'rounded-inverted-accent-text-small',

  $border-radius : 2px,

  $background-color: transparent,
  $background-color-over: transparent,
  $background-color-disabled: transparent,

  $border-width : 0px,
  $border-color: transparent,
  $border-color-over: transparent,
  $border-color-focus: transparent,
  $border-color-pressed: transparent,
  $border-color-disabled: transparent,

  $color: $interactive-color,
  $color-over : $black,
  $color-disabled: $heat-scale-2,

  $font-size : 12px,
  $font-family: $info-font,
  $font-family-over: $info-font,
  $font-family-focus: $info-font,
  $font-family-pressed: $info-font,
  $font-family-disabled: $info-font,

  $icon-size : 12px,
  $glyph-color : $white
);

.x-btn-rounded-inverted-accent-small,
.x-btn-rounded-inverted-accent-text-small {
  padding: 6px 12px 4px 12px!important;
  background-image: none;
  height: 24px;
}

@include extjs-button-ui (
  $ui: 'rounded-inverted-accent-icon-small',

  $border-radius : 2px,
  $border-width : 2px,
  $border-color: #F5D9B3,
  $border-color-over: $info-color,

  $background-color: $gray-7,
  $background-color-over: opacify($info-color, 0.4),

  $text-padding: 0px,

  $color: $info-color,
  $color-over: $gray-7,
  $color-disabled: $heat-scale-4,

  $font-size : 12px!important,
  $font-family: $info-font,
  $font-family-over: $info-font,
  $font-family-focus: $info-font,
  $font-family-pressed: $info-font,
  $font-family-disabled: $info-font,

  $icon-size : 15px,
  $glyph-color : $white
);

.x-btn-rounded-small,
.x-btn-rounded-accent-small {
  padding: 5px 5px 4px 5px;
  background-image: none;
  border-width: 0;
}

.x-btn-rounded-small.contrast {
  border: 2px solid black;
  background-color: black;

  span {
    color: $gray-7;
  }

  &:hover {
    border: 2px solid $gray-7;
    background-color: $gray-7;
    span {
      color: black;
    }
  }
}

.x-btn-rounded-small-disabled.contrast:hover,
.x-btn-rounded-small-disabled.contrast:hover span {
  background-color: transparent;
  color: $dark-color;
}


.x-btn-rounded-accent-small-over {
  opacity: 0.9;
}

.x-btn-rounded-small-noicon button,
.x-btn-rounded-accent-small-noicon button {
  height: 22px;
}

.x-btn-rounded-small-noicon .x-btn-inner {
  height: 22px;
}

.x-btn-arrow {
  background-image: none;
}

/* This is for inputs who apply the button classes (e.g. login form). There is probably a better way. */
input:-webkit-autofill {
  background-color: #fff !important;
}

input.x-btn-rounded-inverted-accent-small {
  padding: 4px 12px 4px 12px!important;
  color: $white;
  font-weight: normal;
  font-size: 12px;
  font-family: $info-font;

  &:hover {
    &.enabled {
      opacity: 0.9;
      color: $white;
    }
  }
}

.x-btn-rounded-inverted-accent-small {
  background-image: none;
}

.x-btn-rounded-inverted-accent-small-over {
  opacity: 0.9;

  svg {
    fill: $gray-7;
  }
}

.x-btn-rounded-inverted-accent-icon-small {
  padding: 0 4px 1px 2px;
  top: 0;

  .info {
    top: -4px;
    background-image: url(images/info.png);
    background-size: 15px 15px;
  }
}

.x-btn-rounded-inverted-accent-icon-small-over {

  .info {
    top: -4px;
    background-image: url(images/infoover.png);
    background-size: 15px 15px;
  }
}

.x-btn-rounded-inverted-accent-icon-small-over {
  opacity: 0.9;
}

.x-btn-rounded-inverted-accent-icon-small:hover {
  background-color: $info-color;
  border-color : $info-color;

  .x-btn-inner {
    color: $gray-7;
  }

  .icon {
    background-image: url(images/infoover.png);
  }
}

button.imgbutton {
  padding: 0;
  border: none;
  background-color: transparent;
  cursor: pointer;
  background-image: url(images/dropdown_normal.svg);
}

button.imgbuttonover,
button.imgbutton-menubuttonover {
  background-image: url(images/dropdown_hover.svg);
}

.yaxisbutton {
  position: absolute;
}

